compiler_errors/examples/name_typo_1.f90
program helol
    print *, "Hello, World!"
end program hello
